<resources>
    <string name="app_name">BarkoderShopApp</string>
    <string name="result_title">Barkoder!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_update">List is successful updated</string>
    <string name="listName_empty_dialog">List name is empty!</string>
    <string name="alert_dialog_back">If you back to home screen ur list create will be delted!</string>
    <string name="alert_title_list_save">List Save</string>
    <string name="alert_title_list_save_positive">OK</string>
    <string name="alert_title_list_save_negative">Stay</string>
    <string name="toast_list_secesfful_created">The list was successfully created</string>
    <string name="toast_list_name_empty">List name is empty!</string>
    <string name="history_list_not_checeked_yet">Not checked yet</string>
    <string name="toast_list_sucessful_updated">List is successful updated</string>
    <string name="open_nav">open nav</string>
    <string name="close_nav">close nav</string>
    <string name="languages">Languages</string>
    <string name="speech_prompt">qeqw</string>
    <string name="speech_not_supported">qwe</string>
    <string name="add">Add</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="unit">Unit</string>
    <string name="barcode">Barcode</string>
    <string name="productName">Product Name</string>
    <string name="takePhoto">Take a Photo</string>
    <string name="createProduct">Create Product</string>
    <string name="products">products</string>
    <string name="recentProducts">Recent Products</string>
    <string name="recentLists">Recent Lists</string>
    <string name="listName">List Name</string>
    <string name="unchecked">Unchecked!</string>
    <string name="homeScreen">Home Screen</string>
    <string name="myLists">My Lists</string>
    <string name="myProducts">My Products</string>
    <string name="createList">Create List</string>
    <string name="updateList">Update List</string>
    <string name="productCreated">The product was successfully created</string>
    <string name="fieldsEmpty">Fields cannot be empty</string>
    <string name="deleteProduct">Delete Product</string>
    <string name="deleteProductDialog">Are you sure you want to delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="deleteList">Delete List</string>
    <string name="deleteListDialog">Are you sure you want to delete this list?</string>
    <string name="restoreList">Restore List</string>
    <string name="restoreListDialog">Are you sure you want to restore checkouts of this list?</string>
    <string name="yes">Yes</string>
    <string name="updateProduct">Update Product</string>
    <string name="update">Update</string>


</resources>